fix alignment of toc tree items in sidebar
The global toctree showing the document structure uses a different
HTML mix than the in-page toctree, so we have to express the padding
differently.

--- a/openstackdocstheme/theme/openstackdocs/static/css/combined.css
+++ b/openstackdocstheme/theme/openstackdocs/static/css/combined.css
@@ -3877,10 +3877,10 @@ a.overview-btn.contribute-btn i {
 	list-style: none;
 }
 
-/* shift the first list in the toc left to account for the fact
-   that there are no bullets */
-#table-of-contents.docs-sidebar-section ul:first-of-type {
-	padding-left: 15px;
+/* shift the first level of list in the toc left to account for the
+   fact that there are no bullets */
+#table-of-contents.docs-sidebar-section ul  {
+	padding-left: 20px;
 }
 
 /* do not change the background color of the section when the user
